--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div style="margin:-8px">
   <app-nav-bars></app-nav-bars>
-<div class="container">
+  <div class="container">
+    <app-card-container></app-card-container>
+    <div class="content">
+      <app-content-viewer></app-content-viewer>
 
-</div>
+    </div>
+  </div>
 </div>
