--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,8 +1,9 @@
 .card{
     padding: 2.5px 10px;
-    margin: 10px 10px;
+    margin: 0px 20px;
     width: 20vw;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .card.selected{
